src/main.css
:root {
	--n23-color-primary: #7a2e44;
	--n23-color-on-primary: #324186;
	--n23-color-on-primary-active: #232f5c;
	--n23-color-secondary: #6a288a;
	--n23-color-on-secondary: #184a4e;

	--n23-color-surface: #e9ecef;
	--n23-color-font: #161925;

	--n23-asideMenu-background-color: #eee;
	--n23-asideMenu-font-color: var(--n23-color-font);
	--n23-asideMenu-mobile-background-color: #eee;
	--n23-asideMenu-border-right-color: var(--n23-color-font);

	--n23-color-error: #ff3333;
	--n23-color-success: #1f5120;
	--n23-color-warning: #424242;

	--n23-grey: #4d4d4d;

	--n23-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
		0 17px 50px 0 rgba(0, 0, 0, 0.19);

	--n23-font-weight-thiner: 200;
	--n23-font-weight-thin: 400;
	--n23-font-weight-normal: 600;
	--n23-font-weight-bold: 900;
	--n23-font-weight-semi-bold: 700;

	--n23-font-size-normal: 18px;
	--n23-font-size-big: 22px;
	--n23-font-size-small: 14px;
	--n23-font-size-semi-small: 16px;
	--n23-font-size-bigger: 28px;

	--n23-font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir,
		segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial,
		sans-serif;
}

body {
	margin: 0;
	padding: 0;
	background-color: var(--n23-color-surface);
}

html:has(div[class^="index-module_masonryContainer"]) {
	& {
		overflow-y: scroll;
	}
}

html:has(div[class^="index-module_homeContent"]) {
	footer {
		display: none;
	}
}

@media (max-width: 575.98px) {
}

@media (max-width: 576px) and (max-width: 767.98px) {
}

@media (max-width: 768px) and (max-width: 991.98px) {
}

@media (max-width: 992px) and (max-width: 1199.98px) {
}

@media (min-width: 1200px) and (max-width: 1399.98px) {
}

